--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
   <div class="img">
 
-    <img src="ph.jpg" alt="" id="img1">
+    <img src="ph.jpg" alt="https://razakhan5864.github.io/portfolio/" id="img1">
   </div>
   
 <div class="abt"><h1>about me</h1></div>
@@ -67,7 +67,7 @@
   <div class="ep">
    
 
-<a href=""><div class="ep1">
+<a href="https://github.com/dashboard"><div class="ep1">
     
     <span><i class="fa-solid fa-graduation-cap" style="color:rgb(2, 2, 43);"></i></span>
        <h1>Experience</h1>
@@ -77,7 +77,7 @@
 
 
 
-<a href=""><div class="ep2">
+<a href="https://github.com/dashboard"><div class="ep2">
 
     <span><i class="fa-solid fa-diagram-project" style="color:rgb(2, 2, 43);"></i></span>
     <h1>projects</h1>
