--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <div class="git1">
 
-      <a href="">  <img src="https://pngimg.com/uploads/github/github_PNG28.png"  alt=""></a>
+      <a href="https://github.com/razakhan5864/portfolio.git">  <img src="https://pngimg.com/uploads/github/github_PNG28.png"  alt=""></a>
 
 <h1>MY GITHUB ACCOUNT  : RAZAKHAN5864</h1>
     </div>
